fix container overflow

--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,7 @@ footer{
 .container{
     max-width: 1140px;
     margin: auto;
+    overflow: hidden;
 }
 
 .row{
